# mcmario

./: .gitmodules  CHANGELOG.md  ChangeLog.md  bench.csv  cabal.project  links.txt  mcmario.cabal  ratings.gnuplot
mcmario/: mcmario.cabal
mcmario/src/: Main.hs
mcmario/src/MCMario/: GameDB.hs  RatingDB.hs
sql/: create.sh  create.sql  delete.sh
src/: Main.hs  UI.hs  bench.hs  mc-rating-graph.hs  mcmario.hs
src/Data/: MonoidMap.hs  Partition.hs
src/MCMario/: CSV.hs  GameDB.hs  Model.hs  RatingDB.hs  STM.hs
src/MCMario/GameDB/: QueryCache.hs
static/: index.html  style.css  ui.js
