name:                mcmario
version:             0.1.0
synopsis:            Suggest handicaps for Dr. Mario matchups
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2017
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable mcmario
  main-is:             mcmario.hs
  other-modules:       MCMario.CSV,
                       MCMario.GameDB,
                       MCMario.Model,
                       MCMario.RatingDB
  -- other-extensions:    
  build-depends:       aeson >=1.1 && <1.5,
                       arithmoi >=0.5 && <0.6,
                       base >=4.9 && <4.12,
                       bytestring >=0.10 && <0.11,
                       cassava >=0.5 && <0.6,
                       containers >=0.5.8 && <0.6,
                       data-default >=0.7 && <0.8,
                       deepseq >=1.4 && <1.5,
                       fgl >=5.5 && <5.6,
                       polynomial >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       snap >=1.0 && <1.2,
                       snap-core >=1.0 && <1.2,
                       snap-extras >=0.12 && <0.13,
                       stm >=2.4 && <2.5,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7,
                       unix >=2.7 && <2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
                       -threaded

-- TODO: make an mcmario library so we can reduce the duplication with the
-- executable stanza above (but be careful about including MCMario.CSV and its
-- orphan instances)
benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             bench.hs
  other-modules:       MCMario.CSV,
                       MCMario.GameDB,
                       MCMario.Model,
                       MCMario.RatingDB
  build-depends:
                       arithmoi >=0.5 && <0.6,
                       base >=4.9 && <4.12,
                       bytestring >=0.10 && <0.11,
                       cassava >=0.5 && <0.6,
                       containers >=0.5.8 && <0.6,
                       criterion >=1.2 && <1.3,
                       data-default >=0.7 && <0.8,
                       deepseq >=1.4 && <1.5,
                       fgl >=5.5 && <5.6,
                       polynomial >=0.7 && <0.8,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7,
                       unix >=2.7 && <2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
                       -threaded
