cabal-version:       2.2

name:                mcmario
version:             0.1.0
synopsis:            Suggest handicaps for Dr. Mario matchups
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2017
category:            Game
extra-source-files:  CHANGELOG.md

executable mcmario
  main-is:             mcmario.hs
  other-modules:       UI
  -- other-extensions:
  build-depends:       base ^>=4.11.0.0
                     , argon2 ^>=1.3
                     , bytestring ^>=0.10
                     , lucid ^>=2.9
                     , postgresql-simple ^>=0.6
                     , snap ^>=1.1
                     , snap-core ^>=1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
                       -threaded
