name:                mcmario
version:             0.1.0
synopsis:            Suggest handicaps for Dr. Mario matchups
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2017
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable mcmario
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       ad >=4.3 && <4.4,
                       base >=4.9 && <4.10,
                       logfloat >=0.13 && <0.14,
                       polynomial >=0.7 && <0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
