name:                mcmario
version:             0.1.0
synopsis:            Suggest handicaps for Dr. Mario matchups
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2017
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable mcmario
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       polynomial >=0.7 && <0.8,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
